# Robot

./: CMakeLists.txt  main.cpp  project.cmake
common/: CMakeLists.txt  error.h  project.cmake  robot_vision.proto
common/src/: error.h
robot_vision/: CMakeLists.txt  README.md  project.cmake  robot_vision.cpp  robot_vision.hpp
robot_vision/src/: robot_vision.cpp  robot_vision.hpp
src/: main.cpp
